[package]
name = "atprsup"
version = "0.1.0"
authors = ["45gfg9 <mc45@qq.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
rusb = "0.8"
structopt = "0.3"
strum = { version = "0.21", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
