[package]
name = "atprsup"
version = "0.1.0"
authors = ["45gfg9 <mc45@qq.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Software for ATPR programmer"
repository = "https://github.com/45gfg9/ATPRsup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "2.1.0"
rusb = "0.8"
clap = { version = "3.0", features = ["cargo"] }
clap_complete = "3.0"
indicatif = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
